Bug 161647 - Selecting a multiday event in month view highlights only one day
Summary: Selecting a multiday event in month view highlights only one day
Status: CLOSED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-05-05 08:53 UTC by Juha Tuomala
Modified: 2009-03-04 09:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Selected multiday item has lighter green than single day item (7.49 KB, image/png)
2009-03-03 20:00 UTC, Sergio Martins
Details
Explaining what I see... (166.19 KB, image/jpeg)
2009-03-03 20:45 UTC, Michael Leupold
Details
Area where you can click to select the item (16.08 KB, image/png)
2009-03-03 22:55 UTC, Sergio Martins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juha Tuomala 2008-05-05 08:53:09 UTC
Version:            (using KDE 3.5.9)
Installed from:    Fedora RPMs

When I've a multiday event, I click that box in any day in month view, it highlights it by changing the color of that box to dark blue. 

But that happens only in that 'day' where I happen to click it, not the whole box that continues from day to day.

I think it would be more intuitive that it would change the color to blue in every day where that event extends.

something like this:

|==========|bbbbluebbbb|==========|=========|
|          |           |          |         |           |           |
|          |           |          |         |
|         4|          5|         6|        7|


Guess this is more like a bug than wish.

Korganizer is the best calendar program on Linux,
thank you for that!
Comment 1 Michael Leupold 2008-09-28 12:49:26 UTC
Still reproducible in trunk r865573.
Comment 2 Sergio Martins 2009-03-03 19:59:08 UTC
I don't think this is a bug.

You are clicking the month cell, not the item. If you select the item, it will change color correctly.

I'll attach a screenshot.
Comment 3 Sergio Martins 2009-03-03 20:00:28 UTC
Created attachment 31757 [details]
Selected multiday item has lighter green than single day item
Comment 4 Michael Leupold 2009-03-03 20:45:44 UTC
Created attachment 31758 [details]
Explaining what I see...

I tried and it seems selection behaviour of events which exceed a specific length is hard in month-view. I could reproduce with bugs spanning days in 3 weeks (3 "lines") on r932573.
Comment 5 Sergio Martins 2009-03-03 22:55:49 UTC
Created attachment 31761 [details]
Area where you can click to select the item

The bug is that, when you click an item, MonthScene::itemAt(pos) returns null.

Here's a better image, if you click the green, you can select an item, otherwise the cell gets selected. (it's nor a real korganizer, just an illustration of where you can click)
Comment 6 Sergio Martins 2009-03-03 23:21:53 UTC
SVN commit 934845 by smartins:

The returned path must be a closed one, otherwise MonthScene::itemAt(pos) wont always detect the item.

BUG: 161647 


 M  +4 -1      monthgraphicsitems.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=934845