The returned path must be a closed one, otherwise MonthScene::itemAt(pos) wont always detect the item.

BUG: 161647 

svn path=/trunk/KDE/kdepim/; revision=934845